--- a/src/app.html
+++ b/src/app.html
@@ -7,7 +7,7 @@
 		font-family: "Clash Display Medium";
 		font-optical-sizing: auto;
 		font-style: normal;
-		font-size: x-large;
+		font-size: large;
 	}
 </style>
 
