--- a/src/app.html
+++ b/src/app.html
@@ -1,7 +1,11 @@
 <!doctype html>
 <html lang="en">
 <style>
+	@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&family=Tektur:wght@400..900&display=swap');
 
+	div {
+		font-family: "Tektur", sans-serif;
+	}
 </style>
 
 <head>
