removed g client id

--- a/src/app.html
+++ b/src/app.html
@@ -16,7 +16,7 @@
 
 	<meta charset="utf-8" />
 	<meta name="google-signin-client_id"
-		content="791276530561-516epk75ca30hk173asit5cp3ftfj0bj.apps.googleusercontent.com">
+		content="client id">
 	<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<script src="https://apis.google.com/js/platform.js" async defer></script>
